--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.6",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.15"
   }
 }
