--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.3.0",
     "autoprefixer": "^10.3.6",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
