--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.13",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
     "graphql": "^15.6.0",
     "next": "11.1.2",
     "react": "17.0.2",
