Migrated to TypeScript and add config

--- a/package.json
+++ b/package.json
@@ -1,32 +1,57 @@
 {
-  "name": "webapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "aquila-webapp",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "export SET NODE_OPTIONS=--openssl-legacy-provider && next dev",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && next build",
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && next start",
-    "lint": "export SET NODE_OPTIONS=--openssl-legacy-provider && next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "build-stats": "cross-env ANALYZE=true npm run build",
+    "export": "next export",
+    "build-prod": "run-s clean build export",
+    "clean": "rimraf .next out",
+    "lint": "next lint",
+    "build-types": "tsc --noEmit --pretty",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@apollo/client": "^3.4.13",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "graphql": "^15.6.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-slideshow-image": "^3.6.0",
-    "styled-components": "^5.3.1"
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.4",
+    "classnames": "^2.3.1",
+    "emotion": "^11.0.0",
+    "next": "^12.0.2",
+    "next-seo": "^4.28.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.3.0",
-    "autoprefixer": "^10.3.6",
-    "babel-plugin-styled-components": "^1.13.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "postcss": "^8.3.8",
-    "tailwindcss": "^2.2.15"
-  }
+    "@next/bundle-analyzer": "^12.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-next": "^12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unused-imports": "^1.1.5",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4"
+  },
+  "license": "ISC"
 }
