--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,7 @@
     "clean": "rimraf .next out",
     "lint": "next lint",
     "build-types": "tsc --noEmit --pretty",
-    "prepare": "husky install"
+    "prepare": "cd .. && husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
