fix: docker prod and secure backend by usage of env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,10 @@ version: '3'
 services:
   db:
     container_name: aquila_pgdb
-    restart: unless-stopped
+    restart: always
     image: postgres:13-alpine
-    environment: 
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_HOST=db
+    env_file:
+      - ./backend/env/postgres.env
     networks:
       - core
     # ports:
@@ -19,12 +16,10 @@ services:
   backend:
     container_name: aquila_backend
     build:
-      context: ./backend/docker
+      context: ./backend
       dockerfile: Dockerfile
-    # command: 
-    #   ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     env_file:
-      - ./env/backend.env
+      - ./backend/env/prod.env
     volumes:
       - ./backend:/app/backend
       - /var/run/docker.sock:/var/run/docker.sock
@@ -38,7 +33,7 @@ services:
   webapp:
     container_name: aquila_webapp
     build:
-      context: ./webapp/docker
+      context: ./webapp
       dockerfile: Dockerfile
     networks:
       - core
