--- a/backend/env/backend.env
+++ b/backend/env/backend.env
@@ -1,5 +1,7 @@
+DEBUG=True
 DATABASE_NAME=postgres
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
-DATABASE_HOST=db
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
+SECRET_KEY=*
