--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -1,12 +1,50 @@
-FROM node:alpine as build
-
+# Install dependencies only when needed
+FROM node:16-alpine AS deps
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . ./
+COPY package.json package-lock.json ./ 
+RUN npm ci
+
+# Rebuild the source code only when needed
+FROM node:16-alpine AS builder
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
+
+ENV NEXT_TELEMETRY_DISABLED 1
 RUN npm run build
 
 # remove dev dependencies
 RUN npm prune --production
+
+# Production image, copy all the files and run next
+FROM node:16-alpine AS runner
+WORKDIR /app
+
+ENV NODE_ENV production
+
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+COPY --from=builder /app/next.config.js ./
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
+
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+
+# FROM node:alpine as build
+
+# WORKDIR /app
+# COPY package*.json ./
+# RUN npm install
+# COPY . ./
+# RUN npm run build
+
+EXPOSE 3000
+
+ENV PORT 3000
 
 CMD ["npm", "start"]
