--- a/package.json
+++ b/package.json
@@ -1,58 +1,37 @@
 {
-  "name": "aquila-webapp",
+  "name": "aquila",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "export": "next export",
-    "build-prod": "run-s clean build export",
-    "clean": "rimraf .next out",
     "lint": "next lint",
-    "build-types": "tsc --noEmit --pretty",
-    "prepare": "cd .. && husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.4",
+    "@mui/material": "^5.9.2",
     "@supabase/supabase-js": "^1.35.4",
     "classnames": "^2.3.1",
     "emotion": "^11.0.0",
     "next": "^12.2.2",
-    "next-seo": "^4.28.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "next-seo": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^12.0.2",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.37",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "autoprefixer": "^10.4.0",
+    "@types/node": "^18.6.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
-    "eslint-config-next": "^12.0.2",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-unused-imports": "^1.1.5",
-    "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.11",
-    "prettier": "^2.4.1",
-    "rimraf": "^3.0.2",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.4"
+    "eslint": "^8.21.0",
+    "husky": "^8.0.1",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.7",
+    "typescript": "^4.7.4"
   },
-  "license": "ISC"
+  "license": "Apache-2.0"
 }
