--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,8 +5,8 @@ WORKDIR /app
 
 # Install dependencies
 COPY package.json ./
-RUN npm install
+RUN yarn install
 COPY . .
 
 # Default command
-CMD ["npm", "run", "build"]
+CMD ["yarn", "run", "build"]
