--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "autoprefixer": "^10.4.8",
     "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
+    "eslint-config-next": "^12.2.3",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7",
