--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -30,7 +29,6 @@
     "eslint": "^8.21.0",
     "eslint-config-next": "^12.2.3",
     "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4"
